make error codes look like code

--- a/docs/errors/actor-tokens.mdx
+++ b/docs/errors/actor-tokens.mdx
@@ -8,7 +8,7 @@ type: reference
 
 Guide to troubleshooting actor token errors.
 
-## ActorTokenRevokedCode
+## `ActorTokenRevokedCode`
 
 ### You might see...
 
@@ -25,7 +25,7 @@ Guide to troubleshooting actor token errors.
 2.
 3.
 
-## ActorTokenAlreadyUsedCode
+## `ActorTokenAlreadyUsedCode`
 
 ### You might see...
 
@@ -42,7 +42,7 @@ Guide to troubleshooting actor token errors.
 2.
 3.
 
-## ActorTokenCannotBeUsedCode
+## `ActorTokenCannotBeUsedCode`
 
 ### You might see...
 
@@ -59,7 +59,7 @@ Guide to troubleshooting actor token errors.
 2.
 3.
 
-## ActorTokenNotInSignInCode
+## `ActorTokenNotInSignInCode`
 
 ### You might see...
 
@@ -76,7 +76,7 @@ Guide to troubleshooting actor token errors.
 2.
 3.
 
-## ActorTokenSubjectNotFoundCode
+## `ActorTokenSubjectNotFoundCode`
 
 ### You might see...
 
@@ -93,7 +93,7 @@ Guide to troubleshooting actor token errors.
 2.
 3.
 
-## ActorTokenCannotBeRevokedCode
+## `ActorTokenCannotBeRevokedCode`
 
 ### You might see...
 
