--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -5,11 +5,11 @@ description: A breakdown of all Clerk's errors.
 
 # Errors overview
 
-## Actor tokens
+## [Actor tokens](/docs/errors/actor-tokens)
 
-* [ActorTokenRevokedCode](/docs/errors/actor-tokens#actor-token-revoked-code)
-* [ActorTokenAlreadyUsedCode](/docs/errors/actor-tokens#actor-token-already-used-code)
-* [ActorTokenCannotBeUsedCode](/docs/errors/actor-tokens#actor-token-cannot-be-used-code)
-* [ActorTokenNotInSignInCode](/docs/errors/actor-tokens#actortokennotinsignincode)
-* [ActorTokenSubjectNotFoundCode](/docs/errors/actor-tokens#actor-token-subject-not-found-code)
-* [ActorTokenCannotBeRevokedCode](/docs/errors/actor-tokens#actor-token-cannot-be-revoked-code)
+* [`ActorTokenRevokedCode`](/docs/errors/actor-tokens#actor-token-revoked-code)
+* [`ActorTokenAlreadyUsedCode`](/docs/errors/actor-tokens#actor-token-already-used-code)
+* [`ActorTokenCannotBeUsedCode`](/docs/errors/actor-tokens#actor-token-cannot-be-used-code)
+* [`ActorTokenNotInSignInCode`](/docs/errors/actor-tokens#actortokennotinsignincode)
+* [`ActorTokenSubjectNotFoundCode`](/docs/errors/actor-tokens#actor-token-subject-not-found-code)
+* [`ActorTokenCannotBeRevokedCode`](/docs/errors/actor-tokens#actor-token-cannot-be-revoked-code)
