minor docs fixes found during content audit (#578)

--- a/docs/components/control/clerk-loading.mdx
+++ b/docs/components/control/clerk-loading.mdx
@@ -9,6 +9,8 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
 
 ## Usage
 
+<InjectKeys>
+
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
   ```tsx filename="pages/_app.tsx"
@@ -40,7 +42,7 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
 
   function App() {
     return (
-      <ClerkProvider publishableKey="pk_test_.........................">
+      <ClerkProvider publishableKey={{pub_key}}>
         <ClerkLoading>
           <div>Clerk is loading</div>
         </ClerkLoading>
@@ -77,3 +79,5 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
   ```
   </Tab>
 </Tabs>
+
+</InjectKeys>
