--- a/docs/errors/actor-tokens.mdx
+++ b/docs/errors/actor-tokens.mdx
@@ -4,108 +4,63 @@ description: Decode errors you might run into using Clerk.
 type: reference
 ---
 
-# Actor token errors
-
-Guide to troubleshooting actor token errors.
+# Actor token errors index
 
 ## `ActorTokenRevokedCode`
 
-### You might see...
-
-* "actor token has been revoked"
-* "This actor token has been revoked and cannot be used anymore."
-
-### Common causes
-
-* 
-
-### Troubleshooting steps
-
-1.
-2.
-3.
+```json
+{
+    shortMessage: "actor token has been revoked",
+    longMessage:  "This actor token has been revoked and cannot be used anymore.",
+    code:         ActorTokenRevokedCode,
+}
+```
 
 ## `ActorTokenAlreadyUsedCode`
 
-### You might see...
-
-* "actor token has already been used"
-* "This actor token has already been used. Each token can only be used once."
-
-### Common causes
-
-* 
-
-### Troubleshooting steps
-
-1.
-2.
-3.
+```json
+{
+    shortMessage: "actor token has already been used",
+    longMessage:  "This actor token has already been used. Each token can only be used once.",
+    code:         ActorTokenAlreadyUsedCode,
+}
+```
 
 ## `ActorTokenCannotBeUsedCode`
 
-### You might see...
-
-* "actor token cannot be used"
-* "This actor token cannot be used anymore. Please request a new one."
-
-### Common causes
-
-* 
-
-### Troubleshooting steps
-
-1.
-2.
-3.
+```json
+{
+    shortMessage: "actor token cannot be used",
+    longMessage:  "This actor token cannot be used anymore. Please request a new one.",
+    code:         ActorTokenCannotBeUsedCode,
+}
 
 ## `ActorTokenNotInSignInCode`
 
-### You might see...
-
-* "not in sign in"
-* "Actor tokens can only be used during sign in."
-
-### Common causes
-
-* 
-
-### Troubleshooting steps
-
-1.
-2.
-3.
+```json
+{
+    shortMessage: "not in sign in",
+    longMessage:  "Actor tokens can only be used during sign in.",
+    code:         ActorTokenNotInSignInCode,
+}
+```
 
 ## `ActorTokenSubjectNotFoundCode`
 
-### You might see...
-
-* "user not found"
-* "The user of the actor token no longer exists. Please request a new one."
-
-### Common causes
-
-* 
-
-### Troubleshooting steps
-
-1.
-2.
-3.
+```json
+{
+    shortMessage: "user not found",
+    longMessage:  "The user of the actor token no longer exists. Please request a new one.",
+    code:         ActorTokenSubjectNotFoundCode,
+}
+```
 
 ## `ActorTokenCannotBeRevokedCode`
 
-### You might see...
-
-* "cannot revoke"
-* "Actor token cannot be revoked because its status is %s. Only pending tokens can be revoked."
-
-### Common causes
-
-* 
-
-### Troubleshooting steps
-
-1.
-2.
-3.
+```json
+{
+    shortMessage: "cannot revoke",
+    longMessage:  fmt.Sprintf("Actor token cannot be revoked because its status is %s. Only pending tokens can be revoked.", status),
+    code:         ActorTokenCannotBeRevokedCode,
+}
+```
