--- a/docs/deployments/environments.mdx
+++ b/docs/deployments/environments.mdx
@@ -1,6 +1,6 @@
 ---
 title: Environments / Instances
-description: An overview of the differences between Development and Production instances
+description: An overview of the differences between development and production instances.
 ---
 
 # Environments / Instances
@@ -9,7 +9,7 @@ When creating a new application within Clerk, you are provided with two instance
 ## Development instance
 A `Development` instance is Clerk's default instance type and has characteristics that allow it to be more useful for local development. To facilitate development and local authentication, `Development` instances have a more relaxed security posture and are not suitable for production workloads.
 
-Some notable examples of `Development`-only characteristics are: 
+Some notable examples of `Development`-only characteristics in a Clerk application are: 
 - A `Development` banner is shown prominently in the Clerk Dashboard to make clear you're managing or configuring non-production data
 - Email and SMS templates are prefixed with the environment type to prevent against using `Development` instances for production purposes
 - Some social connections use shared credentials by default 
@@ -26,7 +26,7 @@ Some notable examples of `Development`-only characteristics are:
 ## Production instance
 A `Production` instance is the more robust option of Clerk's instance types. `Production` instances are meant to support high volumes of traffic and by default, have a more strict security posture.
 
-Some notable differences between `Production` and `Development` instances are: 
+Some notable differences between `Production` and `Development` instances in a Clerk application are: 
 - You must associate a production domain within the Clerk Dashboard
 - You are required to provision your own SSO credentials 
 
