--- a/docs/deployments/environments.mdx
+++ b/docs/deployments/environments.mdx
@@ -1,9 +1,9 @@
 ---
-title: Environments / Instances
+title: Instances / Environments
 description: An overview of the differences between development and production instances.
 ---
 
-# Environments / Instances
+# Instances / Environments
 When creating a new application within Clerk, you are provided with two instances: `Development` and `Production`.  These instances vary slightly and should only be used appropriately.
 
 ## Development instance
