adds applications errors

--- a/docs/errors/actor-tokens.mdx
+++ b/docs/errors/actor-tokens.mdx
@@ -1,66 +1,67 @@
 ---
 title: Actor token errors
-description: Decode errors you might run into using Clerk.
+description: An index of Clerk errors related to actor tokens.
 type: reference
 ---
 
 # Actor token errors index
 
-## `ActorTokenRevokedCode`
+## `ActorTokenRevoked`
 
 ```json
 {
     shortMessage: "actor token has been revoked",
     longMessage:  "This actor token has been revoked and cannot be used anymore.",
-    code:         ActorTokenRevokedCode,
+    code:         actor_token_revoked_code,
 }
 ```
 
-## `ActorTokenAlreadyUsedCode`
+## `ActorTokenAlreadyUsed`
 
 ```json
 {
     shortMessage: "actor token has already been used",
     longMessage:  "This actor token has already been used. Each token can only be used once.",
-    code:         ActorTokenAlreadyUsedCode,
+    code:         actor_token_already_used_code,
 }
 ```
 
-## `ActorTokenCannotBeUsedCode`
+## `ActorTokenCannotBeUsed`
 
 ```json
 {
     shortMessage: "actor token cannot be used",
     longMessage:  "This actor token cannot be used anymore. Please request a new one.",
-    code:         ActorTokenCannotBeUsedCode,
+    code:         actor_token_cannot_be_used_code,
 }
+```
 
-## `ActorTokenNotInSignInCode`
+## `ActorTokenCanBeUsedOnlyInSignIn`
 
 ```json
 {
     shortMessage: "not in sign in",
     longMessage:  "Actor tokens can only be used during sign in.",
-    code:         ActorTokenNotInSignInCode,
+    code:         actor_token_not_in_sign_in_code,
 }
 ```
 
-## `ActorTokenSubjectNotFoundCode`
+## `ActorTokenSubjectNotFound`
 
 ```json
 {
     shortMessage: "user not found",
     longMessage:  "The user of the actor token no longer exists. Please request a new one.",
-    code:         ActorTokenSubjectNotFoundCode,
+    code:         actor_token_subject_not_found_code,
 }
 ```
 
-## `ActorTokenCannotBeRevokedCode`
+## `ActorTokenCannotBeRevoked`
 
 ```json
 {
     shortMessage: "cannot revoke",
     longMessage:  fmt.Sprintf("Actor token cannot be revoked because its status is %s. Only pending tokens can be revoked.", status),
-    code:         ActorTokenCannotBeRevokedCode,
+    code:         actor_token_cannot_be_revoked_code,
 }
 ```
