--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -7,9 +7,24 @@ description: A breakdown of all Clerk's errors.
 
 ## [Actor tokens](/docs/errors/actor-tokens)
 
-* [`ActorTokenRevokedCode`](/docs/errors/actor-tokens#actor-token-revoked-code)
-* [`ActorTokenAlreadyUsedCode`](/docs/errors/actor-tokens#actor-token-already-used-code)
-* [`ActorTokenCannotBeUsedCode`](/docs/errors/actor-tokens#actor-token-cannot-be-used-code)
-* [`ActorTokenNotInSignInCode`](/docs/errors/actor-tokens#actortokennotinsignincode)
-* [`ActorTokenSubjectNotFoundCode`](/docs/errors/actor-tokens#actor-token-subject-not-found-code)
-* [`ActorTokenCannotBeRevokedCode`](/docs/errors/actor-tokens#actor-token-cannot-be-revoked-code)
+* [`ActorTokenRevoked`](/docs/errors/actor-tokens#actor-token-revoked)
+* [`ActorTokenAlreadyUsed`](/docs/errors/actor-tokens#actor-token-already-used)
+* [`ActorTokenCannotBeUsed`](/docs/errors/actor-tokens#actor-token-cannot-be-used)
+* [`ActorTokenCanBeUsedOnlyInSignIn`](/docs/errors/actor-tokens#actor-token-can-be-used-only-in-sign-in)
+* [`ActorTokenSubjectNotFound`](/docs/errors/actor-tokens#actor-token-subject-not-found)
+* [`ActorTokenCannotBeRevoked`](/docs/errors/actor-tokens#actor-token-cannot-be-revoked)
+
+## [Allowlist identifiers](/docs/errors/allowlist-identifiers)
+
+* [`AllowlistIdentifierNotFound`](/docs/errors/allowlist-identifiers#resource-not-found-code)
+
+## [Applications](/docs/errors/applications)
+
+* [`ApplicationNotFound`](/docs/errors/applications#application-not-found)
+* [`NotAuthorizedToDeleteSystemApplication`](/docs/errors/applications#not-authorized-to-delete-system-application)
+* [`NotAuthorizedToMoveApplicationToOrganization`](/docs/errors/applications#not-authorized-to-move-application-to-organization)
+* [`ApplicationAlreadyBelongsToOrganization`](/docs/errors/applications#application-already-belongs-to-organization)
+* [`ApplicationAlreadyBelongsToUser`](/docs/errors/applications#application-already-belongs-to-user)
+* [`InvalidPlanForResource`](/docs/errors/applications#invalid-plan-for-resource)
+* [`CannotTransferPaidAppToAccountWithoutBillingInformation`](/docs/errors/applications#cannot-transfer-paid-app-to-account-without-billing-information)
+* [`CannotTransferToAccountWithoutPaymentMethod`](/docs/errors/applications#cannot-transfer-to-account-without-payment-method)
