--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -8,7 +8,7 @@ type: conceptual
 
 ## Development and production instances
 
-Production instances are used for production, pre-production, or staging environments with fixed domains. Production instances offer the strongest security and performance guarantees. For more details on Clerk internals please review the following sections.
+Production instances are used for production, pre-production, or staging environments with fixed domains. Production instances offer the strongest security and performance guarantees. Development instances contain certain trade-offs meant to support ease of active development. For more details on the differences, read the [Instances / Environments](/docs/deployments/environments) doc.
 
 <Callout type="warning">
 Never use a development instance in a production environment. Development instances don’t have the same strong security guarantees.
