adding auth errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -28,3 +28,23 @@ description: A breakdown of all Clerk's errors.
 * [`InvalidPlanForResource`](/docs/errors/applications#invalid-plan-for-resource)
 * [`CannotTransferPaidAppToAccountWithoutBillingInformation`](/docs/errors/applications#cannot-transfer-paid-app-to-account-without-billing-information)
 * [`CannotTransferToAccountWithoutPaymentMethod`](/docs/errors/applications#cannot-transfer-to-account-without-payment-method)
+
+## [Auth](/docs/errors/auth)
+
+* [`InvalidClerkSecretKey`](/docs/errors/auth#invalid-clerk-secret-key)
+* [`InvalidAuthentication`](/docs/errors/auth#invalid-authentication)
+* [`InvalidAuthorizationHeaderFormat`](/docs/errors/auth#invalid-authorization-header-format)
+* [`InvalidAuthorization`](/docs/errors/auth#invalid-authorization)
+* [`InvalidCSRFToken`](/docs/errors/auth#invalid-csrf-token)
+* [`MissingRequestHeaders`](/docs/errors/auth#missing-request-headers)
+* [`InvalidOriginHeader`](/docs/errors/auth#invalid-origin-header)
+* [`DevBrowserUnauthenticated`](/docs/errors/auth#dev-browser-unauthenticated)
+* [`URLBasedSessionSyncingDisabled`](/docs/errors/auth#url-based-session-syncing-disabled)
+* [`InvalidRequestForEnvironment`](/docs/errors/auth#invalid-request-for-environment)
+* [`RequestInvalidForInstance`](/docs/errors/auth#request-invalid-for-instance)
+* [`InvalidHost`](/docs/errors/auth#invalid-host)
+* [`IdentificationExists`](/docs/errors/auth#identification-exists)
+* [`IdentifierNotAllowedAccess`](/docs/errors/auth#identifier-not-allowed-access)
+* [`SignedOut`](/docs/errors/auth#signed-out)
+* [`InvalidUserSettings`](/docs/errors/auth#invalid-user-settings)
+* [`InvalidHandshake`](/docs/errors/auth#invalid-handshake)
