add backup code errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -48,3 +48,7 @@ description: A breakdown of all Clerk's errors.
 * [`SignedOut`](/docs/errors/auth#signed-out)
 * [`InvalidUserSettings`](/docs/errors/auth#invalid-user-settings)
 * [`InvalidHandshake`](/docs/errors/auth#invalid-handshake)
+
+## [Backup codes](/docs/errors/backup-codes)
+
+* [`BackupCodesNotAvailable`](/docs/errors/backup-codes#backup-codes-not-available)
