Adding billing errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -52,3 +52,10 @@ description: A breakdown of all Clerk's errors.
 ## [Backup codes](/docs/errors/backup-codes)
 
 * [`BackupCodesNotAvailable`](/docs/errors/backup-codes#backup-codes-not-available)
+
+## [Billing](/docs/errors/billing)
+
+* [`CheckoutLocked`](/docs/errors/billing#checkout-locked)
+* [`CheckoutSessionMismatch`](/docs/errors/billing#checkout-session-mismatch)
+* [`UnsupportedSubscriptionPlanFeatures`](/docs/errors/billing#unsupported-subscription-plan-features)
+* [`InvalidSubscriptionPlanSwitch`](/docs/errors/billing#invalid-subscription-plan-switch)
